# -AI-Code-Review-

./: LANGUAGES.md  README.en.md  README.md  action.yml  pyproject.toml
.github/workflows/: aicr-example.yml
aicr/: __init__.py  action_main.py  cli.py  diff.py  github_api.py  heuristics.py  llm.py  review.py
aicr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/: smoke.sh
