[project]
name = "aicr"
version = "0.1.0"
description = "Open-source AI Code Review CLI and GitHub Action"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Open-Source Contributors" }]
keywords = [
    "ai", "code-review", "github-action", "static-analysis", "security",
    "llm", "openai", "ollama", "sast", "cli"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "requests>=2.31.0",
    "PyYAML>=6.0.1",
]

[project.scripts]
aicr = "aicr.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
